--- a/miguel-melo-design/src/assets/scss/_variables.scss
+++ b/miguel-melo-design/src/assets/scss/_variables.scss
@@ -3,3 +3,12 @@ $black-body: #0C0C0C;
 $black-body-alpha: rgba(12, 12, 12, 0.678);
 $grey-text: #E5E5E5;
 $grey-form: #E9E9E9;
+
+// breakponts
+$smartphones: 575.98px;
+$tablets: 767.98px;
+$desktops: 991.98px;
+$largeDesktops: 1199.98px;
+$hdDesktops: 1440.98px;
+$fullHdDesktops: 1919.98px;
+$desktops4k: 2999.98; 
