import button scsss

--- a/miguel-melo-design/src/assets/scss/main.scss
+++ b/miguel-melo-design/src/assets/scss/main.scss
@@ -1,6 +1,7 @@
 @import '../../../node_modules/bootstrap-4-grid/css/grid.min.css';
 @import 'variables.scss';
 @import 'breakpoint.scss';
+@import 'button.scss';
 
 .container {
   margin: 0 auto;
