--- a/miguel-melo-design/src/assets/scss/main.scss
+++ b/miguel-melo-design/src/assets/scss/main.scss
@@ -2,6 +2,7 @@
 @import 'variables.scss';
 @import 'breakpoint.scss';
 @import 'button.scss';
+@import 'spinner.scss';
 
 .container {
   margin: 0 auto;
