--- a/miguel-melo-design/src/assets/scss/_breakpoint.scss
+++ b/miguel-melo-design/src/assets/scss/_breakpoint.scss
@@ -15,7 +15,7 @@
       @media (max-width: $hdDesktops)  { @content ; }
     }
     @else if $point == fullHdDesktops {
-      @media (max-width: $fullHdDesktops)  { @content ; }
+      @media (min-width: $fullHdDesktops)  { @content ; }
     }
     @else if $point == minDesktop {
       @media (min-width: $desktops)  { @content ; }
