--- a/miguel-melo-design/src/assets/scss/main.scss
+++ b/miguel-melo-design/src/assets/scss/main.scss
@@ -97,3 +97,11 @@ nav {
     max-width: 19.666667%;
   }
 }
+.col-fhd-5 {
+  @include breakpoint(fullHdDesktops) {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 19.6666666667%;
+    flex: 1 0 19.666667%;
+    max-width: 20.666667%;
+  }
+}
